# stratum

./: .codecov.yaml  .dockerignore  .gitignore  .taplo-cargo.toml  .taplo-misc.toml  .taplo-user-config.toml  .taplo.toml  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  INTEROPERABILITY-TESTS.md  NOTES.md  POC-regtest1.md  README-DEV.md  README.md  RELEASE.md  SECURITY.md  build_header.sh  check-versioning-lib-release.sh  clippy-on-all-workspaces.sh  code-coverage-report.sh  codecov.yaml  equality.sh  message-generator-tests.sh  mg-codecov-tests.sh  rust-toolchain.toml  rustfmt.toml  shell.nix  sv2-header-check.sh  sv2-publish.sh  sv2-rpi.sh  tarpaulin.toml  test.sh
apps-utils/error-handling/: Cargo.toml
apps-utils/error-handling/src/: lib.rs
benches/: Cargo.toml  benchmark_results.txt
benches/benches/: README.md
benches/benches/src/: pool_benchmark.rs
benches/docker-foundationV2/: Dockerfile  bitcoin.js  config.js  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs  url.rs
common/src/constants/: mod.rs
examples/interop-cpp/: .gitignore  Cargo.toml  README.md  run.sh
examples/interop-cpp/src/: main.rs
examples/interop-cpp/template-provider/: in_container_build.sh  template-provider.cpp
examples/ping-pong/: Cargo.toml  README.md
examples/ping-pong-encrypted/: Cargo.toml  README.md
examples/ping-pong-encrypted/src/: client.rs  error.rs  main.rs  messages.rs  server.rs
examples/ping-pong-with-noise/: Cargo.toml  README.md
examples/ping-pong-with-noise/src/: main.rs  messages.rs  node.rs
examples/ping-pong-without-noise/: Cargo.toml  README.md
examples/ping-pong-without-noise/src/: main.rs  messages.rs  node.rs
examples/ping-pong/src/: client.rs  error.rs  main.rs  messages.rs  server.rs
examples/sv1-client-and-server/: Cargo.toml
examples/sv1-client-and-server/src/: main.rs
examples/sv1-mining-device/: Cargo.toml
examples/sv1-mining-device/src/: client.rs  job.rs  main.rs  miner.rs
examples/sv1-to-sv2/: Cargo.toml  README.md
examples/sv1-to-sv2/src/: main.rs  sv1_downstream.rs  sv2_upstream.rs
examples/template-provider-test/: Cargo.toml
examples/template-provider-test/src/: main.rs
examples/translator/: Cargo.toml  README.md  proxy-config.toml
examples/translator/src/: config.rs  downstream.rs  error.rs  main.rs  proxy_config.rs  setup_connection_handler.rs  upstream.rs
protocols/: Cargo.toml  DEPENDENCIES.md  tarpaulin.toml
protocols/fuzz-tests/: Cargo.toml
protocols/fuzz-tests/src/: main.rs
protocols/stratum-translation/: Cargo.toml
protocols/stratum-translation/src/: error.rs  sv1_to_sv2.rs  sv2_to_sv1.rs
protocols/v1/: Cargo.toml  README.md
protocols/v1/examples/: client_and_server.rs
protocols/v1/src/: client.rs  error.rs  json_rpc.rs  lib.rs  server.rs  tempCodeRunnerFile.rs  utils.rs
protocols/v2/binary-sv2/: Cargo.toml  README.md
protocols/v2/bitcoin-core-sv2/: Cargo.toml
protocols/v2/channels-sv2/: Cargo.toml  README.md
protocols/v2/codec-sv2/: Cargo.toml  README.md
protocols/v2/common-messages/: Cargo.toml
protocols/v2/const-sv2/: Cargo.toml  README.md
protocols/v2/framing-sv2/: Cargo.toml  README.md
protocols/v2/handlers-sv2/: Cargo.toml  README.md
protocols/v2/messages-sv2/: Cargo.toml
protocols/v2/noise-sv2/: Cargo.toml  README.md  tree
protocols/v2/parsers-sv2/: Cargo.toml  README.md
protocols/v2/prove_unpanic/: Cargo.toml  run.sh
protocols/v2/roles-logic-sv2/: Cargo.toml  README.md  reg-test-block.toml
protocols/v2/serde-sv2/: Cargo.toml
protocols/v2/sv2-ffi/: Cargo.toml  sv2.h
protocols/v2/template-distribution/: Cargo.toml
roles/: Cargo.toml  README.md  tarpaulin.toml
roles/auth-server/: Cargo.toml  auth_config.toml
roles/auth-server/src/: config.rs  lib.rs  main.rs
roles/jd-client/: Cargo.toml  README.md  jdc-config-btcpp-workshop.toml  jdc-config-sv2-workshop.toml  jdc-config.toml  proxy-config-example.toml  proxy-config.toml
roles/jd-client/config-examples/: jdc-config-hosted-example.toml  jdc-config-local-example.toml  proxy-config-hosted-example.toml  proxy-config-local-example.toml
roles/jd-client/src/: args.rs  downstream.rs  error.rs  main.rs  proxy_config.rs  status.rs
roles/jd-server/: Cargo.toml  README.md  jds-config-example.toml  jds-config-sv2-workshop.toml  jds-config.example.toml  jds-config.toml
roles/jd-server/config-examples/: jds-config-hosted-example.toml  jds-config-local-example.toml
roles/jd-server/src/: args.rs  error.rs  main.rs  mempool.rs  status.rs
roles/lib/jd-client/: Cargo.toml
roles/lib/jd-server/: Cargo.toml
roles/lib/pool/: Cargo.toml
roles/mining-proxy/: Cargo.toml  README.md  proxy-config.toml
roles/mining-proxy-sv1/: Cargo.toml
roles/new-jd-client/: Cargo.toml
roles/new-pool/: Cargo.toml  README.md
roles/pool/: Cargo.toml  README.md  config.toml  pool-config-btcpp-workshop.toml  pool-config-example.toml  pool-config-sv2-workshop.toml  pool-config.toml
roles/stratum-apps/: Cargo.toml  README.md
roles/tests-integration/: Cargo.toml  README.md
roles/translator/: Cargo.toml  Dockerfile.dev  README.md  proxy-config-example.toml  proxy-config.toml  tproxy-config-example.toml  tproxy-config-sv2-workshop.toml  tproxy-config.toml  translator-config-sv2-workshop.toml
stratum-cli/: Cargo.toml
stratum-cli/src/: main.rs
stratum-core/: Cargo.toml  README.md
stratum-core/src/: lib.rs
stratum-core/stratum-translation/: Cargo.toml
sv1/: Cargo.toml
sv1/examples/: client_and_server.rs
sv1/src/: error.rs  json_rpc.rs  lib.rs  utils.rs
utils/: Cargo.toml  tarpaulin.toml
utils/anyhow/: Cargo.toml
utils/bip32-key-derivation/: Cargo.toml  README.md
utils/buffer/: Cargo.toml  README.md
utils/error-handling/: Cargo.toml
utils/key-utils/: Cargo.toml  README.md
utils/logging/: Cargo.toml
utils/message-generator/: Cargo.toml  README.md  debug  sv1-test.json  test.json  test.toml  tproxy_test.json
utils/network-helpers/: Cargo.toml
utils/rpc/: Cargo.toml
utils/rpc-client/: Cargo.toml
utils/sv2_serde_json/: Cargo.toml
utils/sv2_serde_json_macros/: Cargo.toml
(+1485 files in other folders)
