[workspace]
resolver = "2"

members = [
    "sv1",
    "sv2/binary-sv2/codec",
    "sv2/buffer-sv2",
    "sv2/binary-sv2/derive_codec", 
    "sv2/binary-sv2",
    "sv2/noise-sv2",
    "sv2/framing-sv2",
    "sv2/codec-sv2",
    "sv2/subprotocols/common-messages",
    "sv2/subprotocols/template-distribution",
    "sv2/subprotocols/mining",
    "sv2/subprotocols/job-declaration",
    "sv2/roles-logic-sv2",
    "sv2/channels-sv2",
    "sv2/parsers-sv2",
    "sv2/handlers-sv2",
    "stratum",
    "apps-utils/error-handling",
    "apps-utils/key-utils",
    "apps-utils/rpc",
    "apps-utils/config-helpers",
    "apps-utils/network-helpers",
    "apps-utils/stratum-translation"
]

exclude = [
    "integration-test-framework"
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1
