[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.10.0"
criterion = "0.5.1"
# prometheus = "0.13.3"
async-channel = "1.4.0"
v1={path="../protocols/v1", package="sv1_api"}
serde_json = "1.0.70"
iai="0.1"

[[bench]]
name = "criterion_sv1_benchmark"
path="benches/src/sv1/criterion_sv1_benchmark.rs"
harness = false

[[bench]]
name = "iai_sv1_benchmark"
path="benches/src/sv1/iai_sv1_benchmark.rs"
harness = false