[package]
name = "benchmark"
version = "1.0.1"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", optional = true }
async-std={version = "1.10.0", features = ["attributes"]}
criterion = "0.5.1"
async-channel = "1.4.0"
v1 = { path="../protocols/v1", package="sv1_api" }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
iai="0.1"
mining_sv2 = { path = "../protocols/v2/subprotocols/mining" }
roles_logic_sv2 = { path = "../protocols/v2/roles-logic-sv2" }
framing_sv2 = { path = "../protocols/v2/framing-sv2" }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
num-bigint = "0.4.3"
num-traits = "0.2.15"
codec_sv2 = { path = "../protocols/v2/codec-sv2", features=["noise_sv2"] }
binary_sv2 = { path = "../protocols/v2/binary-sv2" }
network_helpers_sv2 = { path = "../roles/roles-utils/network-helpers" }
rand = "0.8.4"
primitive-types = "0.13.1"
tracing = "0.1"

[[bench]]
name = "criterion_sv1_benchmark"
path="benches/src/sv1/criterion_sv1_benchmark.rs"
harness = false

[[bench]]
name = "iai_sv1_benchmark"
path="benches/src/sv1/iai_sv1_benchmark.rs"
harness = false

[[bench]]
name = "criterion_sv2_benchmark"
path = "benches/src/sv2/criterion_sv2_benchmark.rs"
harness = false

[[bench]]
name = "iai_sv2_benchmark"
path = "benches/src/sv2/iai_sv2_benchmark.rs"
harness = false
