[workspace]

resolver="2"

members = [
    "v1",
    "v2/binary-sv2/codec",
    "v2/binary-sv2/derive_codec",
    "v2/binary-sv2",
    "v2/noise-sv2",
    "v2/framing-sv2",
    "v2/codec-sv2",
    "v2/subprotocols/common-messages",
    "v2/subprotocols/template-distribution",
    "v2/subprotocols/mining",
    "v2/subprotocols/job-declaration",
    "v2/roles-logic-sv2",
    "v2/channels-sv2",
    "v2/parsers-sv2", 
    "v2/handlers-sv2",
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1
