[workspace]
resolver="2"

members = [
    "pool",
    "test-utils/mining-device",
    "translator",
    "jd-client",
    "jd-server",
    "roles-utils/network-helpers",
    "roles-utils/stratum-translation"
]

[profile.dev]
# Required by super_safe_lock
opt-level = 1

[profile.test]
# Required by super_safe_lock
opt-level = 1
