[package]
name = "sv1_api"
version = "2.1.3"
authors = ["The Stratum V2 Developers"]
edition = "2021"
readme = "README.md"
description = "API for bridging SV1 miners to SV2 pools"
documentation = "https://docs.rs/sv1_api"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"
homepage = "https://stratumprotocol.org"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_sv2 = { path = "../sv2/binary-sv2", version = "^6.0.0" }
bitcoin_hashes = { workspace = true }
byteorder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

