name = "stratum_v2_utils"
version = "1.0.0"
authors = ["The Stratum v2 Developers"]
edition = "2021"
rust-version = "1.75.0"
description = "The Stratum protocol defines how miners, proxies, and pools communicate to contribute hashrate to the Bitcoin network. Stratum v2 is a robust set of primitives which anyone can use to expand the protocol or implement a role."
documentation = "https://github.com/stratum-mining/stratum"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT + Apache-2.0"
license-file = "LICENSE.md"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[workspace]
resolver="2"

members = [
    "network-helpers",
    "buffer",
    "error-handling",
    "key-utils",
    "bip32-key-derivation", 
    "rpc"]

exclude = [
    "message-generator",
]
