[package]
name = "interop-cpp"
version = "0.1.0"
authors = ["fi3 <email@email.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec_sv2 = { path = "../../protocols/v2/codec-sv2" }
const_sv2 = { path = "../../protocols/v2/const-sv2" }
binary_sv2 = { path = "../../protocols/v2/binary-sv2/binary-sv2" }
common_messages_sv2 = { path = "../../protocols/v2/subprotocols/common-messages" }
template_distribution_sv2 = { path = "../../protocols/v2/subprotocols/template-distribution" }

[features]
with_serde = []
