[package]
name = "interop-cpp"
version = "0.1.0"
authors = ["fi3 <email@email.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec_sv2 ="0.1.4"
const_sv2 = "0.1.1"
binary_sv2 = "0.1.5"
common_messages_sv2 = "0.1.1"

template_distribution_sv2 = "0.1.1"

[features]
with_serde = []
