[package]
name = "interop-cpp"
version = "0.1.0"
authors = ["The Stratum V2 Developers"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec_sv2 = { path = "../../protocols/v2/codec-sv2" }
stratum_common = { path = "../../common", features = ["constants"] }
binary_sv2 = { path = "../../protocols/v2/binary-sv2" }
common_messages_sv2 = { path = "../../protocols/v2/subprotocols/common-messages" }
template_distribution_sv2 = { path = "../../protocols/v2/subprotocols/template-distribution" }
