[package]
name = "ping-pong-encrypted"
version = "0.1.0"
edition = "2021"
authors = [ "SRI Community" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stratum-common = { path = "../../common" }
key-utils = { version = "^1.0.0", path = "../../utils/key-utils" }
network_helpers_sv2 = { version = "5.0.0", path = "../../roles/roles-utils/network-helpers" }
rand = "0.8"
tokio = { version = "1.44.1", features = [ "full" ] }
async-channel = "1.5.1"
