[package]
name = "ping-pong-encrypted"
version = "0.1.0"
edition = "2021"
authors = [ "SRI Community" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stratum-apps = { path = "../../roles/stratum-apps" }
rand = "0.8"
tokio = { version = "1.44.1", features = [ "full" ] }
async-channel = "1.5.1"
