[package]
name = "ping-pong-encrypted"
version = "0.1.0"
edition = "2021"
authors = [ "SRI Community" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
key-utils = { version = "^1.0.0", path = "../../utils/key-utils" }
rand = "0.8"
tokio = { version = "1.44.1", features = [ "full" ] }
async-channel = "1.5.1"
binary_sv2 = "1.0.0"
network_helpers_sv2 = { version = "2.0.0", features = ["with_tokio"] }
codec_sv2 = { version = "1.0.1", features = ["noise_sv2"] }
