[package]
name = "ping_pong_with_noise"
version = "0.1.0"
authors = ["fi3 <email@email.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde = { version = "1.0.89", features = [
  "derive",
  "alloc",
], default-features = false, optional = true }
async-channel = "1.5.1"
async-std = "1.8.0"
bytes = "1.0.1"
binary_sv2 = { version = "^1.0.0", path = "../../protocols/v2/binary-sv2/binary-sv2" }
codec_sv2 = { version = "^1.0.0", path = "../../protocols/v2/codec-sv2", features = [
  "noise_sv2",
] }
network_helpers_sv2 = { version = "^2.0.0", path = "../../roles/roles-utils/network-helpers", features = [
  "async_std",
] }
key-utils = { version = "^1.0.0", path = "../../utils/key-utils" }

[features]
with_serde = [
  "binary_sv2/with_serde",
  "serde",
  "codec_sv2/with_serde",
  "network_helpers_sv2/with_serde",
]
