[package]
name = "ping_pong_without_noise"
version = "0.1.0"
authors = ["fi3 <email@email.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
async-channel = "1.5.1"
async-std="1.8.0"
bytes = "1.0.1"
serde_sv2 = { path = "../../protocols/v2/serde-sv2" }
# TODO change it!
codec_sv2 = { path = "../../protocols/v2/codec-sv2" }
