[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"
authors = [ "SRI Community" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network_helpers_sv2 = { version = "4.0.0", path = "../../roles/roles-utils/network-helpers" }

rand = "0.8"
