[package]
name = "client_and_server"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO change it!
v1={path="../../protocols/v1"}
async-std="1.8.0"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
async-channel = "1.5.1"
