[package]
name = "client_and_server"
version = "0.1.0"
authors = ["user"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v1 = { path = "../../protocols/v1", package = "sv1_api" }
async-std = "1.8.0"
serde = { version = "1.0.89", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0.64", default-features = false, features = [
  "alloc",
] }
async-channel = "1.5.1"
