[package]
name = "sv1_to_sv2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.5.1"
async-std="1.8.0"
common_messages_sv2 = { path = "../../protocols/v2/subprotocols/common-messages", version = "0.1.*" }
mining_sv2 = { path = "../../protocols/v2/subprotocols/mining", version = "0.1.*" }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
v1 = { path = "../../protocols/v1" }

[features]
with_serde = []
