[package]
name = "template-provider-test"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec_sv2 = { version = "1.0", path = "../../protocols/v2/codec-sv2", features = [
  "noise_sv2",
] }
roles_logic_sv2 = { version = "^0.1.0", path = "../../protocols/v2/roles-logic-sv2" }
network_helpers_sv2 = { version = "^0.1.0", path = "../../roles/roles-utils/network-helpers", features = [
  "async_std",
] }
async-channel = "1.5.1"
async-std = { version = "1.8.0", features = ["attributes"] }
