[package]
name = "translator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "1.5.1"
async-recursion = "0.3.2"
async-std = { version = "1.8.0", features = ["attributes"] }
buffer_sv2 = { path = "../../utils/buffer"}
codec_sv2 = { path = "../../protocols/v2/codec-sv2", features = ["noise_sv2", "with_buffer_pool"] }
network_helpers = { path = "../../utils/network-helpers", features=["async_std", "with_buffer_pool"] }
once_cell = "1.12.0"
roles_logic_sv2 = { path = "../../protocols/v2/roles-logic-sv2" }
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["full"] }
toml = { git = "https://github.com/diondokter/toml-rs", default-features = false, rev = "c4161aa" }
v1 = { path = "../../protocols/v1" }

[features]
with_serde = []
