[package]
name = "v1"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.3.2"
byteorder = "1.2.7"
hex = "0.3.2"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
