[package]
name = "sv1_api"
version = "1.0.0"
authors = ["user"]
edition = "2018"
description = "API for bridging SV1 miners to SV2 pools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stratum-mining/stratum"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.3.2"
byteorder = "1.2.7"
pretty_env_logger = "0.4.0"
log = "0.4.0"
hex = "0.4.3"
serde = { version = "1.0.89", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.64", default-features = false, features = ["alloc"] }
tracing = {version = "0.1"}
binary_sv2 = { version = "^1.0.0", path = "../v2/binary-sv2/binary-sv2"}

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
