[package]
name = "jd_client"
version = "0.1.4"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "Job Declarator Client (JDC) role"
documentation = "https://docs.rs/jd_client"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[lib]
name = "jd_client"
path = "src/lib/mod.rs"

[dependencies]
stratum-common = { path = "../../common", features=["bitcoin"]}
async-channel.workspace = true
async-recursion.workspace = true
binary_sv2.workspace = true
buffer_sv2.workspace = true
codec_sv2.workspace = true
framing_sv2.workspace = true
network_helpers_sv2.workspace = true
roles_logic_sv2.workspace = true
serde.workspace = true
futures.workspace = true
tokio.workspace = true
ext-config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
error_handling.workspace = true
nohash-hasher.workspace = true
key-utils.workspace = true
primitive-types.workspace = true
config-helpers.workspace = true
