[package]
name = "jd_server"
version = "0.1.3"
authors = ["The Stratum V2 Developers"]
edition = "2021"
description = "Job Declarator Server (JDS) role"
documentation = "https://github.com/stratum-mining/stratum"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]


[lib]
name = "jd_server"
path = "src/lib/mod.rs"

[dependencies]
stratum-apps = { path = "../stratum-apps", features = ["jd_server"] }
error_handling = { path = "../../utils/error-handling" }
key-utils = { path = "../../utils/key-utils" }
async-channel = "1.5.1"
rand = "0.8.4"
tokio = { version = "1.44.1", features = ["full"] }
ext-config = { version = "0.14.0", features = ["toml"], package = "config" }
tracing = { version = "0.1" }
nohash-hasher = "0.2.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc","raw_value"] }
serde = { version = "1.0.89", features = ["derive", "alloc"], default-features = false }
hashbrown = { version = "0.11", default-features = false, features = ["ahash", "serde"] }
hex = "0.4.3"
clap = { version = "4.5.39", features = ["derive"] }
